--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <input type="text" id="input-el">  
     <ul id="ulel"><li></li></ul>
     <button id="input-btn">SAVE INPUT</button>
+    <button id="delete-btn">DELETE</button>
     <script src="index.js"></script>
 </body>
 </html>
